...

        android:orientation="vertical"
        android:weightSum="1">


        <EditText
            android:id="@+id/NameOfEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/name_of_event"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/description"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/location"
            android:inputType="textPersonName" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/setDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSetDateClicked"
                android:text="@string/set_date" />

            <TextView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:onClick="onClickSetTime"
                android:text="@string/start_time" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0" />

            <Button
                android:id="@+id/endButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:onClick="onClickSetTime"
                android:text="@string/end_time" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/takePictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickTakeImage"
                android:text="@string/takeImage" />

            <Button
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pictureOFLocation" />


        <EditText
            android:id="@+id/keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/keyword" />


...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:onClick="onClickCreateButton"

            android:id = "@+id/createSubmissionButton"
            android:text= "@string/create"



            />

...
