<resources>
    <string name="app_name">FreeApp</string>
    <string name="login">LOGIN</string>
    <string name="register_question">No account yet ? Create one</string>
    <string name="register">SIGN UP</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="username">Username </string>
    <string name="password">Password </string>
    <string name="Search">Type in your research </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_categories_tab">CategoriesTabActivity</string>

    <string name="title_activity_main_screen">Free App</string>

    <string name="title_activity_create_new_submission">CreateNewSubmission</string>
    <string name="description">Description </string>
    <string name="name_of_event">Whats Free </string>
    <string name="location">Location</string>
    <string name="categories">Category</string>
    <string name="set_date">SET DATE</string>

    <string name="start_time">STARTS</string>
    <string name="end_time">ENDS</string>
    <string name="existImage">OPEN EXISTING IMAGE</string>
    <string name="takeImage">TAKE PHOTO</string>
    <string name="keyword">Key Words</string>
    <string name="create">CREATE</string>
    <string name="pictureOFLocation">LocationPicture</string>
    <string name="new_submission">New Submission</string>
    <string name="search">Search</string>
    <string-array name="categories">

        <item>Food</item>
        <item>Clothing</item>
        <item>Sport</item>
        <item>Culture</item>
        <item>NightLife</item>
        <item>Lifestyle</item>
        <item>Miscellaneous</item>
    </string-array>

    <string name="title_activity_map">MapActivity</string>
    <string name="ok">OK</string>
    <string name="filterSubmissions">Filter</string>
    <string name="time">By Time</string>
    <string name="byLikes">By Likes</string>
    <string name="byName">By Name</string>
    <string name="description_image">Submission\'s Image</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="location_not_provided">Location not provided</string>
    <string name="map_button">Switch to Map</string>
    <string name="submission_thumbnail">Submission\'s thumbnail</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_example">Action example</string>
    <string name="username_hint">Username</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="submission_name">Submission\'s name</string>
    <string name="submission_description">Submission\'s description</string>
    <string name="submission_name_row">Submission\'s name</string>
    <string name="rating">Rating</string>
    <string name="title_activity_display_submissions">Display Submission</string>

</resources>
